[package]
name = "node-reconfix"
version = "0.1.0"
authors = ["Aaron Brodersen <aaron@resin.io>"]
license = "MIT"
build = "build.rs"

[lib]
name = "node_reconfix"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.1.20"

[dependencies]
neon = "0.1.20"

[dependencies.reconfix]
path = "../../reconfix"
